<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walls"
    tools:context=".QuestionScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/question_no"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/qno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/_1"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#90FFFFFF"
                android:gravity="center"
                android:text="@string/timer"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_10_marks"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="133dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/quizup" />

            <TextView
                android:id="@+id/questiontitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/textview"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:showDividers="middle">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/option1"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="152dp"
                        android:layout_height="88dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundedbutton"
                        android:text="@string/button"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/option2"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="138dp"
                        android:layout_height="88dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundedbuttontwo"
                        android:text="@string/button"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/option3"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="138dp"
                        android:layout_height="88dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundedbuttontwo"
                        android:text="@string/button"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/option4"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="168dp"
                        android:layout_height="88dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundedbutton"
                        android:text="@string/button"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>